crates/ink/tests/ui/abi/sol/fail/event-too-many-topics.stderr
error: Events can only have up to 3 fields annotated with an `#[ink(topic)]` attribute
 --> tests/ui/abi/sol/fail/event-too-many-topics.rs:1:1
  |
1 | #[ink::event]
  | ^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `ink::event` (in Nightly builds, run with -Z macro-backtrace for more info)
